--- a/src/Dahlberg/PodrBundle/Resources/views/Default/index.html.twig
+++ b/src/Dahlberg/PodrBundle/Resources/views/Default/index.html.twig
@@ -1,11 +1,11 @@
 {# src/Dahlberg/PodrBundle/Resources/views/Default/index.html.twig #}
 {% extends '::base.html.twig' %}
 
-{% block title %}{{ parent() }} | Welcome{% endblock %}
+{% block title %}{{ parent() }}{% endblock %}
 
 {% block body %}
 <div class="row">
-    <h2>Hello {{ name }}!</h2>
+    <h2>Hello!</h2>
     <p>Welcome to PodR</p>
 </div>
 {% endblock %}
