+ Default redirect target for the login page

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -18,7 +18,7 @@
     <nav class="top-bar" data-topbar>
         <ul class="title-area">
             <li class="name">
-                <h1><a href="/">PodR</a></h1>
+                <h1><a href="{{ path('root') }}">PodR</a></h1>
             </li>
             <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
         </ul>
@@ -27,6 +27,17 @@
             <!-- Right Nav Section -->
             <ul class="right">
                 {% if app.user %}
+                <li class="has-form">
+                    <div class="row collapse">
+                        <div class="large-8 small-9 columns">
+                            <input type="text" placeholder="Find Stuff">
+                        </div>
+                        <div class="large-4 small-3 columns">
+                            <a href="#" class="alert button expand">Search</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="divider"></li>
                 <li class="has-dropdown">
                     <a href="#">{{ app.user.username }}</a>
                     <ul class="dropdown">
@@ -41,7 +52,9 @@
 
             <!-- Left Nav Section -->
             <ul class="left">
+                {% if app.user %}
                 <li><a href="#">Podcast</a></li>
+                {% endif %}
             </ul>
         </section>
     </nav>
