--- a/src/Dahlberg/PodrBundle/Resources/views/Account/login.html.twig
+++ b/src/Dahlberg/PodrBundle/Resources/views/Account/login.html.twig
@@ -5,28 +5,31 @@
 
 {% block body %}
 <div class="row">
-    {% if error %}
-        <div>{{ error.message }}</div>
-    {% endif %}
-
     <form action="{{ path('account_login_check') }}" method="post">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" />
+        <fieldset>
+            <legend>Login</legend>
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="_username" value="{{ last_username }}" />
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="_password" />
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="_password" />
 
-        <input type="checkbox" id="remember_me" name="_remember_me" checked />
-        <label for="remember_me">Keep me logged in</label>
+            <input type="checkbox" id="remember_me" name="_remember_me" checked />
+            <label for="remember_me">Keep me logged in</label>
 
-        {#
-            If you want to control the URL the user
-            is redirected to on success (more details below)
-            <input type="hidden" name="_target_path" value="/account" />
-        #}
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
+            {#
+                If you want to control the URL the user
+                is redirected to on success (more details below)
+                <input type="hidden" name="_target_path" value="/account" />
+            #}
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
 
-        <button type="submit">login</button>
+            <button type="submit">login</button>
+
+            {% if error %}
+                <div>{{ error.message }}</div>
+            {% endif %}
+        </fieldset>
     </form>
 </div>
 {% endblock %}
