+ Adding podcast/episode objects with mappings

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -48,7 +48,7 @@
                 <li><a href="{{ path('account_login') }}">Login</a></li>
                 <li class="active"><a href="{{ path('account_register') }}">Register</a></li>
                 {% endif %}
-                <li><a href="#">0.1</a></li>
+                <li><a href="#">0.2-dev</a></li>
             </ul>
 
             <!-- Left Nav Section -->
