--- a/src/Dahlberg/PodrBundle/Resources/views/Podcast/index.html.twig
+++ b/src/Dahlberg/PodrBundle/Resources/views/Podcast/index.html.twig
@@ -1,5 +1,6 @@
 {# src/Dahlberg/PodrBundle/Resources/views/Podcast/index.html.twig #}
 {% extends '::base.html.twig' %}
+{% form_theme form '::form.html.twig' %}
 
 {% block title %}{{ parent() }} | Podcasts{% endblock %}
 
@@ -29,5 +30,15 @@
         {% else %}
         <p>No podcasts found.</p>
         {% endif %}
+
+        {{ form_start(form) }}
+            {{ form_row(form.feedurl) }}
+            {{ form_errors(form) }}
+            {% if formSuccess %}
+                <div data-alert class="alert-box success radius">
+                    {{ formSuccess }}
+                </div>
+            {% endif %}
+        {{ form_end(form) }}
     </div>
 {% endblock %}
