--- a/src/Dahlberg/PodrBundle/Resources/views/Podcast/details.html.twig
+++ b/src/Dahlberg/PodrBundle/Resources/views/Podcast/details.html.twig
@@ -18,6 +18,7 @@
                 <img src="{{ podcast.getItunesImage }}">
             </a>
             {% endif %}
+            <h3>Podcast information</h3>
             <p>Last updated: {{ podcast.getDateUpdated|date('Y-m-d') }}</p>
             <p>Language: {{ podcast.getLanguage }}</p>
             {% if podcast.getItunesExplicit %}
