--- a/src/Dahlberg/PodrBundle/Resources/views/Podcast/details.html.twig
+++ b/src/Dahlberg/PodrBundle/Resources/views/Podcast/details.html.twig
@@ -18,6 +18,26 @@
                 <img src="{{ podcast.getItunesImage }}">
             </a>
             {% endif %}
+            <div class="row">
+                <div class="large-11 large-centered columns">
+                    <ul class="button-group round">
+                        {% if userPodcast and userPodcast.getFollowing %}
+                            <li><a href="#" class="button tiny alert">Unfollow</a></li>
+                        {% else %}
+                            <li><a href="#" class="button tiny success">Follow</a></li>
+                        {% endif %}
+
+                        <li><a href="#" class="button tiny secondary">Like</a></li>
+                        <li><a href="#" class="button tiny disabled secondary">Dislike</a></li>
+
+                        {% if userPodcast and userPodcast.getStarred %}
+                            <li><a href="#" class="button tiny alert">Unstar</a></li>
+                        {% else %}
+                            <li><a href="#" class="button tiny success">Star</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
             <h3>Podcast information</h3>
             <p>Last updated: {{ podcast.getDateUpdated|date('Y-m-d') }}</p>
             <p>Language: {{ podcast.getLanguage }}</p>
