--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -50,12 +50,13 @@
                 <li><a href="{{ path('account_login') }}">Login</a></li>
                 <li class="active"><a href="{{ path('account_register') }}">Register</a></li>
                 {% endif %}
-                <li><a href="#">0.3</a></li>
+                <li><a href="#">0.3.1-dev</a></li>
             </ul>
 
             <!-- Left Nav Section -->
             <ul class="left">
                 {% if app.user %}
+                <li><a href="{{ path('dashboard') }}">Dashboard</a></li>
                 <li><a href="{{ path('podcast_index') }}">Podcast</a></li>
                 {% endif %}
             </ul>
