--- a/src/Dahlberg/PodrBundle/Resources/views/Default/dashboard.html.twig
+++ b/src/Dahlberg/PodrBundle/Resources/views/Default/dashboard.html.twig
@@ -13,5 +13,26 @@
     <div class="row">
         <h2>Dashboard</h2>
 
+        {% if mostLikedPodcasts %}
+            <table>
+                <thead>
+                <tr>
+                    <th width="200">Title</th>
+                    <th width="150">Rate</th>
+                    <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for podcast in mostLikedPodcasts %}
+                    <tr>
+                        <td><a href="{{ path('podcast_details', {'id': podcast.getId}) }}">{{ podcast.getTitle }}</a></td>
+                        <td>{{ podcast.getRating }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        {% else %}
+            <p>No podcasts found.</p>
+        {% endif %}
     </div>
 {% endblock %}
