--- a/src/Dahlberg/PodrBundle/Resources/views/Default/dashboard.html.twig
+++ b/src/Dahlberg/PodrBundle/Resources/views/Default/dashboard.html.twig
@@ -13,26 +13,27 @@
     <div class="row">
         <h2>Dashboard</h2>
 
+        <h4>Most liked Podcasts</h4>
         {% if mostLikedPodcasts %}
-            <table>
-                <thead>
+        <table>
+            <thead>
+            <tr>
+                <th width="200">Title</th>
+                <th width="150">Rate</th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for podcast in mostLikedPodcasts %}
                 <tr>
-                    <th width="200">Title</th>
-                    <th width="150">Rate</th>
-                    <th></th>
+                    <td><a href="{{ path('podcast_details', {'id': podcast.getId}) }}">{{ podcast.getTitle }}</a></td>
+                    <td>{{ podcast.getRating }}</td>
                 </tr>
-                </thead>
-                <tbody>
-                {% for podcast in mostLikedPodcasts %}
-                    <tr>
-                        <td><a href="{{ path('podcast_details', {'id': podcast.getId}) }}">{{ podcast.getTitle }}</a></td>
-                        <td>{{ podcast.getRating }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
+            {% endfor %}
+            </tbody>
+        </table>
         {% else %}
-            <p>No podcasts found.</p>
+        <p>No podcasts found.</p>
         {% endif %}
     </div>
 {% endblock %}
