--- a/src/Dahlberg/PodrBundle/Resources/views/Default/dashboard.html.twig
+++ b/src/Dahlberg/PodrBundle/Resources/views/Default/dashboard.html.twig
@@ -88,7 +88,26 @@
             </div>
             <div class="large-6 columns">
                 <h4>Oldest unarchived Episodes</h4>
-                <p>Soon available</p>
+                {% if oldestUnarchivedEpisodes %}
+                <table class="large-12">
+                    <thead>
+                    <tr>
+                        <th>Title</th>
+                        <th width="100">Date</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for episode in oldestUnarchivedEpisodes %}
+                        <tr>
+                            <td><a href="{{ path('episode_details', {'id': episode.getId}) }}">{{ episode.getTitle }}</a></td>
+                            <td>{% if episode.getPublishedDate %}{{ episode.getPublishedDate|date('Y-m-d') }}{% else %}-{% endif %}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+                {% else %}
+                <p>No episodes found.</p>
+                {% endif %}
             </div>
         </div>
     </div>
