+ Adding Episode index with tabs for stashed, unarchived and unread

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -57,7 +57,8 @@
             <ul class="left">
                 {% if app.user %}
                 <li><a href="{{ path('dashboard') }}">Dashboard</a></li>
-                <li><a href="{{ path('podcast_index') }}">Podcast</a></li>
+                <li><a href="{{ path('podcast_index') }}">Podcasst</a></li>
+                <li><a href="{{ path('episode_index') }}">Episodes</a></li>
                 {% endif %}
             </ul>
         </section>
