--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -46,11 +46,12 @@
                         <li><a href="{{ path('account_logout') }}">Logout</a></li>
                     </ul>
                 </li>
+                <li><a href="#" data-reveal-id="player" class="radius button">Player</a></li>
                 {% else %}
                 <li><a href="{{ path('account_login') }}">Login</a></li>
                 <li class="active"><a href="{{ path('account_register') }}">Register</a></li>
                 {% endif %}
-                <li><a href="#">0.3.2</a></li>
+                <li><a href="#">0.4.0-dev</a></li>
             </ul>
 
             <!-- Left Nav Section -->
@@ -66,6 +67,13 @@
 
     <div id="page">
         {% block body %}{% endblock %}
+    </div>
+
+    <div id="player" class="reveal-modal" data-reveal>
+        <h2>Player</h2>
+        <p class="lead">Test player modal</p>
+        <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
+        <a class="close-reveal-modal">&#215;</a>
     </div>
 
     {% javascripts  '@DahlbergPodrBundle/Resources/public/js/jquery.js'
