--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -46,7 +46,7 @@
                         <li><a href="{{ path('account_logout') }}">Logout</a></li>
                     </ul>
                 </li>
-                <li><a href="#" data-reveal-id="player" class="radius button">Player</a></li>
+                <li><a id="player-toggle" class="radius button">Player</a></li>
                 {% else %}
                 <li><a href="{{ path('account_login') }}">Login</a></li>
                 <li class="active"><a href="{{ path('account_register') }}">Register</a></li>
@@ -64,16 +64,12 @@
             </ul>
         </section>
     </nav>
+    <div id="player">
+
+    </div>
 
     <div id="page">
         {% block body %}{% endblock %}
-    </div>
-
-    <div id="player" class="reveal-modal" data-reveal>
-        <h2>Player</h2>
-        <p class="lead">Test player modal</p>
-        <p>Im a cool paragraph that lives inside of an even cooler modal. Wins</p>
-        <a class="close-reveal-modal">&#215;</a>
     </div>
 
     {% javascripts  '@DahlbergPodrBundle/Resources/public/js/jquery.js'
