--- a/src/Dahlberg/PodrBundle/Resources/public/css/application.css
+++ b/src/Dahlberg/PodrBundle/Resources/public/css/application.css
@@ -13,3 +13,9 @@
     height: 48px;
     width: 100%;
 }
+
+    #player .player-icon {
+        color: #FFFFFF;
+        font-size: 180%;
+        line-height: 48px;
+    }
