+ Adding more buttons and removing autoplay

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -66,11 +66,14 @@
         </section>
     </nav>
     <div id="player">
-        <div class="row">
+        <div id="player-controls" class="row">
+            <i id="player-fast-rewind" class="fi-previous player-icon"></i>
             <i id="player-rewind" class="fi-rewind player-icon"></i>
-            <i id="player-play-pause" class="fi-play player-icon"></i>
+            <i id="player-play" class="fi-play player-icon"></i>
+            <i id="player-pause" class="fi-pause player-icon"></i>
             <i id="player-stop" class="fi-stop player-icon"></i>
-            <i id="player-fast-forward" class="fi-fast-forward player-icon"></i>
+            <i id="player-forward" class="fi-fast-forward player-icon"></i>
+            <i id="player-fast-forward" class="fi-next player-icon"></i>
         </div>
     </div>
 
