--- a/src/Dahlberg/PodrBundle/Resources/public/css/application.css
+++ b/src/Dahlberg/PodrBundle/Resources/public/css/application.css
@@ -3,7 +3,6 @@
     margin-top: 20px;
 }
 
-
 /* Player
 -------------------------------------*/
 #player {
@@ -13,9 +12,12 @@
     height: 48px;
     width: 100%;
 }
-
     #player .player-icon {
         color: #FFFFFF;
         font-size: 180%;
         line-height: 48px;
+    }
+
+    #player-controls .player-pause {
+        display: none;
     }
