--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -66,14 +66,27 @@
         </section>
     </nav>
     <div id="player">
-        <div id="player-controls" class="row">
-            <i id="player-fast-rewind" class="fi-previous player-icon"></i>
-            <i id="player-rewind" class="fi-rewind player-icon"></i>
-            <i id="player-play" class="fi-play player-icon"></i>
-            <i id="player-pause" class="fi-pause player-icon"></i>
-            <i id="player-stop" class="fi-stop player-icon"></i>
-            <i id="player-forward" class="fi-fast-forward player-icon"></i>
-            <i id="player-fast-forward" class="fi-next player-icon"></i>
+        <div class="row">
+            <div class="small-12 large-3 columns">
+                <ul id="player-controls" class="small-block-grid-7">
+                    <li id="player-fast-rewind"><i class="fi-previous player-icon"></i></li>
+                    <li id="player-rewind"><i class="fi-rewind player-icon"></i></li>
+                    <li id="player-play"><i class="fi-play player-icon"></i></li>
+                    <li id="player-pause"><i class="fi-pause player-icon"></i></li>
+                    <li id="player-stop"><i class="fi-stop player-icon"></i></li>
+                    <li id="player-forward"><i class="fi-fast-forward player-icon"></i></li>
+                    <li id="player-fast-forward"><i class="fi-next player-icon"></i></li>
+                </ul>
+            </div>
+            <div id="player-episode-info" class="small-12 large-9 columns">
+                <div id="player-episode-title" class="small-8 columns">Unknown episode</div>
+                <div id="player-podcast-title" class="small-4 columns">Unknown podcast</div>
+            </div>
+        </div>
+        <div class="row">
+            <div id="player-seekbar" class="progress small-12 success round">
+                <span class="meter" style="width: 55%"></span>
+            </div>
         </div>
     </div>
 
