--- a/src/Dahlberg/PodrBundle/Resources/views/Default/dashboard.html.twig
+++ b/src/Dahlberg/PodrBundle/Resources/views/Default/dashboard.html.twig
@@ -38,26 +38,26 @@
                 {% endif %}
             </div>
             <div class="large-6 columns">
-                <h4>Last unread Episodes</h4>
-                {% if latestUnreadEpisodes %}
-                <table class="large-12">
-                    <thead>
-                    <tr>
-                        <th>Title</th>
-                        <th width="100">Date</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for episode in latestUnreadEpisodes %}
+                <h4>Started Episodes</h4>
+                {% if startedEpisodes %}
+                    <table class="large-12">
+                        <thead>
                         <tr>
-                            <td><a href="{{ path('episode_details', {'id': episode.getId}) }}">{{ episode.getTitle }}</a></td>
-                            <td>{% if episode.getPublishedDate %}{{ episode.getPublishedDate|date('Y-m-d') }}{% else %}-{% endif %}</td>
+                            <th>Title</th>
+                            <th width="100">Current Time</th>
                         </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                        {% for userepisode in startedEpisodes %}
+                            <tr>
+                                <td><a href="{{ path('episode_details', {'id': userepisode.episode.getId}) }}">{{ userepisode.episode.getTitle }}</a></td>
+                                <td>{{ userepisode.getCurrentPosition|secondsToTime }}</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
                 {% else %}
-                <p>No episodes found.</p>
+                    <p>No episodes found.</p>
                 {% endif %}
             </div>
         </div>
@@ -87,26 +87,52 @@
                 {% endif %}
             </div>
             <div class="large-6 columns">
+                <h4>Last unread Episodes</h4>
+                {% if latestUnreadEpisodes %}
+                    <table class="large-12">
+                        <thead>
+                        <tr>
+                            <th>Title</th>
+                            <th width="100">Date</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for episode in latestUnreadEpisodes %}
+                            <tr>
+                                <td><a href="{{ path('episode_details', {'id': episode.getId}) }}">{{ episode.getTitle }}</a></td>
+                                <td>{% if episode.getPublishedDate %}{{ episode.getPublishedDate|date('Y-m-d') }}{% else %}-{% endif %}</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                {% else %}
+                    <p>No episodes found.</p>
+                {% endif %}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="large-6 large-push-6 columns">
                 <h4>Oldest unarchived Episodes</h4>
                 {% if oldestUnarchivedEpisodes %}
-                <table class="large-12">
-                    <thead>
-                    <tr>
-                        <th>Title</th>
-                        <th width="100">Date</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for episode in oldestUnarchivedEpisodes %}
+                    <table class="large-12">
+                        <thead>
                         <tr>
-                            <td><a href="{{ path('episode_details', {'id': episode.getId}) }}">{{ episode.getTitle }}</a></td>
-                            <td>{% if episode.getPublishedDate %}{{ episode.getPublishedDate|date('Y-m-d') }}{% else %}-{% endif %}</td>
+                            <th>Title</th>
+                            <th width="100">Date</th>
                         </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                        {% for episode in oldestUnarchivedEpisodes %}
+                            <tr>
+                                <td><a href="{{ path('episode_details', {'id': episode.getId}) }}">{{ episode.getTitle }}</a></td>
+                                <td>{% if episode.getPublishedDate %}{{ episode.getPublishedDate|date('Y-m-d') }}{% else %}-{% endif %}</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
                 {% else %}
-                <p>No episodes found.</p>
+                    <p>No episodes found.</p>
                 {% endif %}
             </div>
         </div>
