Staring work on 0.4.1

--- a/src/Dahlberg/PodrBundle/Resources/views/Default/dashboard.html.twig
+++ b/src/Dahlberg/PodrBundle/Resources/views/Default/dashboard.html.twig
@@ -21,7 +21,7 @@
                     <thead>
                     <tr>
                         <th>Title</th>
-                        <th width="100">Rate</th>
+                        <th width="100">Rating</th>
                     </tr>
                     </thead>
                     <tbody>
