--- a/src/Dahlberg/PodrBundle/Resources/views/Podcast/index.html.twig
+++ b/src/Dahlberg/PodrBundle/Resources/views/Podcast/index.html.twig
@@ -45,6 +45,10 @@
                     {{ formSuccess }}
                 </div>
             {% endif %}
+            <div>
+                {{ form_widget(form.save) }}
+                <a href="{{ path('podcast_import') }}" class="button radius">Import</a>
+            </div>
         {{ form_end(form) }}
     </div>
 {% endblock %}
