+ UI improvement on podcast listing

--- a/src/Dahlberg/PodrBundle/Resources/public/css/application.css
+++ b/src/Dahlberg/PodrBundle/Resources/public/css/application.css
@@ -49,3 +49,11 @@
         margin-top: 10px;
     }
 }
+
+/* Podcast
+-------------------------------------*/
+.podcast-table .podcast-title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
